[project]
name = "aws-billing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "autopep8==2.3.2",
    "boto3==1.39.3",
    "boto3-stubs==1.39.3",
    "botocore==1.39.3",
    "botocore-stubs==1.38.46",
    "certifi==2025.6.15",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "docutils==0.21.2",
    "idna==3.10",
    "jmespath==1.0.1",
    "mypy==1.16.1",
    "mypy-boto3==1.39.0",
    "mypy-boto3-cloudwatch==1.39.0",
    "mypy-extensions==1.1.0",
    "pycodestyle==2.14.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.4",
    "s3transfer==0.13.0",
    "six==1.17.0",
    "toml==0.10.2",
    "types-awscrt==0.27.4",
    "types-requests==2.32.4.20250611",
    "types-s3transfer==0.13.0",
    "types-six==1.17.0.20250515",
    "types-urllib3==1.26.25.14",
    "typing-extensions==4.14.1",
    "urllib3==1.26.19",
]
